started app review html and wrote note-writing/retrieval methods

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -13,7 +13,8 @@ $xlarge-screen: 1600px;
 $xxlarge-screen: 1920px;
 
 // FONTS
-$main-font: "Source Sans Pro", sans-serif;
+$main-font: sans-serif;
+// $main-font: "Source Sans Pro", sans-serif;
 
 // COLORS
 $menu-active-text: #ffffff;
