--- a/app/client/templates/components/app-item.html
+++ b/app/client/templates/components/app-item.html
@@ -204,7 +204,7 @@
 
   <div class="app-item-tiny">
 
-    <div class="app-item-inner" data-action="admin-edit">
+    <div class="app-item-inner" data-action="admin-review">
 
       {{#with app}}
 
