--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -48,12 +48,7 @@
 
       <div class="spacer clearfix"></div>
 
-      {{#if notesToAuthor}}
-        <div class="notes-to-author">
-          {{notesToAuthor}}
-        </div>
-        <div class="spacer"></div>
-      {{/if}}
+      {{> appNotesBox notes=notes}}
 
       <div class="right-float on-top">
 
