--- a/app/client/templates/edit/edit.scss
+++ b/app/client/templates/edit/edit.scss
@@ -64,3 +64,21 @@
   }
 
 }
+
+.app-notes {
+
+  width: 100%;
+  display: block;
+  box-sizing: border-box;
+  color: #555555;
+  font-size: 1.95rem;
+  font-family: $main-font;
+  line-height: 2.8rem;
+
+  .note:not(:last-child) {
+    border-bottom: 1px dashed #555555;
+    padding-bottom: 2rem;
+    margin-bottom: 1rem;
+  }
+
+}
