--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -27,13 +27,13 @@
             <i class="icon-revisions"></i>
             <div class="text">Request Revision</div>
           </div>
-          <div class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" data-action="flag">
-            <i class="icon-flagged_light"></i>
-            <div class="text">Flag</div>
-          </div>
           <div class="sandstorm-button color black {{#if equal parentApp.approved 3}}active{{/if}}" data-action="reject">
             <i class="icon-rejected_light"></i>
             <div class="text">Reject</div>
+          </div>
+          <div class="sandstorm-button color yellow {{#if isFlagged}}active{{/if}}" data-action="flag">
+            <i class="icon-flagged_light"></i>
+            <div class="text">Flag</div>
           </div>
 
         </div>
@@ -44,25 +44,29 @@
 
       <div class="spacer clearfix"></div>
 
-      <textarea class="note-entry"></textarea>
+      <textarea class="note-entry" data-field="note-entry"></textarea>
 
       <div class="spacer clearfix"></div>
 
       {{> appNotesBox notes=parentApp.notes}}
 
+      <div class="spacer clearfix"></div>
+
       <div class="right-float on-top">
 
         <div class="button-block">
-          <div class="sandstorm-button neutral" data-action="save-app">
+          <div class="sandstorm-button neutral" data-action="">
             SAVE
           </div>
-          <div class="sandstorm-button neutral" data-action="submit-app">
+          <div class="sandstorm-button neutral" data-action="submit-note">
             SUBMIT
           </div>
-          <i class="icon-garbage" data-action="delete-app"></i>
+          <i class="icon-garbage" data-action=""></i>
         </div>
 
       </div>
+
+      <div class="spacer clearfix"></div>
 
     </div>
 
@@ -80,10 +84,9 @@
 
         <h3 class="title">Title</h3>
         {{#if fieldEdit 'name'}}
-          <input type="text" data-field="name" value="{{name}}" required />
-        {{else}}
-          <div data-alt-field="name">{{name}}</div>
+          <input type="admin text" data-field="name" value="{{name}}" required />
         {{/if}}
+        <div data-alt-field="name">{{name}}</div>
 
         <h3 class="title">Author</h3>
         <div class="read-only">{{getUsername author}}</div>
