--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -212,7 +212,7 @@
     <div class="owl-carousel">
       {{#each images}}
       <div class="screenshot-container">
-        <div class="screenshot" style="background-image: url('{{screenshotImageUrl this}}')"></div>
+        <div class="screenshot" style="background-image: url('{{screenshotImageUrl this.url}}')"></div>
       </div>
       {{/each}}
     </div>
