added box for original icon if icon is changed

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -169,7 +169,26 @@
         <div class="identicon-instructions">
           <div>For the best results, we suggest the icon be:</div>
           <div><strong>600px</strong> wide by <strong>600px</strong> high (minimum) in PNG or JPEG format.</div>
+
+          {{#unless equal image originalApp.image}}
+            <div class="identicon-container small">
+              <div class="identicon" style="background-image: url('{{imageUrl originalApp.image}}')" data-field="icon-image">#
+              </div>
+            </div>
+          {{/unless}}
+
         </div>
+
+        {{#unless equal image originalApp.image}}
+        <div class="clearfix icon-captions">
+          <div class="left">
+            NEW ICON
+          </div>
+          <div class="right">
+            CURRENT ICON
+          </div>
+        </div>
+        {{/unless}}
 
       </div>
 
