--- a/app/client/templates/review/review.scss
+++ b/app/client/templates/review/review.scss
@@ -68,3 +68,19 @@
   }
 
 }
+
+.icon-captions {
+
+  font-size: 1.6rem;
+
+  .left {
+    display: inline-block;
+    width: 250px;
+  }
+
+  .right {
+    margin-left: 1.5rem;
+    display: inline-block;
+  }
+
+}
