added current status on app review page

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -254,7 +254,7 @@
         </div>
         {{#with status}}
           <div class="status {{color}}">
-            {{text}} <i class="{{icon}}"></i>
+            <i class="{{icon}}"></i> {{text}}
           </div>
         {{/with}}
 
