spk upload progress bar - fixes #35

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -261,13 +261,13 @@
         <div class="sandstorm-button neutral" data-action="scroll-top">
           TOP <i class="fa fa-caret-up"></i>
         </div>
-        <div class="sandstorm-button neutral" data-action="save-app">
+        <div class="sandstorm-button neutral" data-action="save-admin-requests">
           SAVE
         </div>
-        <div class="sandstorm-button neutral" data-action="submit-app">
+        <div class="sandstorm-button neutral" data-action="submit-admin-requests">
           SUBMIT REQUESTS
         </div>
-        <i class="icon-garbage" data-action="delete-app"></i>
+        <i class="icon-garbage" data-action="discard-admin-requests"></i>
       </div>
 
     </div>
