--- a/app/client/templates/upload/upload.scss
+++ b/app/client/templates/upload/upload.scss
@@ -256,6 +256,26 @@
 
     }
 
+    .progress-bar {
+      background-color: #b995c6;
+      width: 100%;
+      height: 0.5rem;
+      position: relative;
+      margin-top: 1.5rem;
+
+      .fill {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        background-color: #783189;
+      }
+    }
+
+    .upload-confirm {
+      margin-top: 1.5rem;
+    }
+
   }
 
   .genre-list {
