increased install and price text sizes

--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -124,6 +124,7 @@
         display: inline-block;
         float: right;
         font-size: $app-price-font-size;
+        font-weight: 400;
         color: $app-price-col;
 
         &.free {
