--- a/app/client/templates/components/app-admin-item.html
+++ b/app/client/templates/components/app-admin-item.html
@@ -65,11 +65,13 @@
 
             </div>
 
-            <div class="rem-space-float">
+            <div class="rem-space-float description-holder">
 
               <div class="app-description">
                 {{{htmlDescription}}}
               </div>
+
+              <div class="fade-box"></div>
 
             </div>
 
