limited length of app description in various app boxes using Amazon-esque fade out

--- a/app/client/templates/components/app-item-full-width.html
+++ b/app/client/templates/components/app-item-full-width.html
@@ -72,11 +72,13 @@
 
           </div>
 
-          <div class="rem-space-float">
+          <div class="rem-space-float description-holder">
 
             <div class="app-description">
               {{{htmlDescription}}}
             </div>
+
+            <div class="fade-box"></div>
 
           </div>
 
