--- a/app/client/templates/components/app-admin-item.scss
+++ b/app/client/templates/components/app-admin-item.scss
@@ -94,16 +94,16 @@
 }
 
 .description-holder {
-  height: 20rem;
+  height: 19rem;
   position: relative;
+}
 
-  .fader {
-    position: absolute;
-    height: 3rem;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1), 90%);
-    pointer-events: none;
-  }
+.fade-box {
+  position: absolute;
+  height: 5rem;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 90%);
+  pointer-events: none;
 }
