--- a/app/client/templates/installedApps/installedApps.scss
+++ b/app/client/templates/installedApps/installedApps.scss
@@ -13,6 +13,13 @@
 
 }
 
+.force-height {
+  height: 3.1rem;
+  display: inline-block;
+  padding-top: 2.5rem;
+  padding-bottom: 2rem;
+}
+
 .update-selector {
 
   user-select: none;
