--- a/app/client/templates/single-app/single-app.scss
+++ b/app/client/templates/single-app/single-app.scss
@@ -83,8 +83,8 @@
 
     .text-section {
 
-      height: 26.5rem;
-      overflow-y: auto;
+      // height: 26.5rem;
+      overflow-y: hidden;
 
       .top-section {
 
