--- a/app/client/templates/single-app/single-app.html
+++ b/app/client/templates/single-app/single-app.html
@@ -50,9 +50,9 @@
                 <div class="half-col">
 
                   <div class="key">Ported by:</div><div class="value">{{getUsername author}}&nbsp;</div>
-                  <div class="key">License:</div><div class="value">{{license}}&nbsp;</div>
+                  <div class="key">License:</div><div class="value">{{verboseNone license}}&nbsp;</div>
                   <div class="key">Code:</div><div class="value">{{{codeFormat codeLink}}}&nbsp;</div>
-                  <div class="key">Version:</div><div class="value">{{getLatestVersion}}&nbsp;</div>
+                  <div class="key">Version:</div><div class="value">{{verboseNone getLatestVersion}}&nbsp;</div>
 
                 </div>
 
