--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -81,7 +81,7 @@
 
         <h4 class="mini-title">Version</h4>
         {{#if fieldEdit 'latestVersion'}}
-          <input type="text" data-action="update-version" data-version-field="number" value="{{latestVersion}}" />
+          <input type="text" data-action="update-version" data-version-field="number" value="{{lastVersionNumber.number}}" />
         {{else}}
           <div data-alt-field="latestVersion" data-action="update-version">{{verboseNone lastVersionNumber.number}}</div>
         {{/if}}
