added nuke modal css/html

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -206,6 +206,16 @@
 
   }
 
+  &.big-gap {
+    > * {
+      margin-right: 3rem;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+
 }
 
 .sandstorm-input {
