removed all instances of FlowRouter.getParam due to bug in FlowRouter, falling back to FlowRouter.current().params

--- a/app/client/templates/review/review.html
+++ b/app/client/templates/review/review.html
@@ -55,13 +55,13 @@
       <div class="right-float on-top">
 
         <div class="button-block">
-          <div class="sandstorm-button neutral" data-action="">
+          <!-- <div class="sandstorm-button neutral" data-action="">
             SAVE
-          </div>
+          </div> -->
           <div class="sandstorm-button neutral" data-action="submit-note">
             SUBMIT
           </div>
-          <i class="icon-garbage" data-action=""></i>
+          <!-- <i class="icon-garbage" data-action=""></i> -->
         </div>
 
       </div>
