added submit confirm to upload page

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -206,6 +206,22 @@
 
   }
 
+  > .message {
+
+    a {
+
+      color: #222222;
+
+    }
+
+    .date {
+
+      color: #783189;
+
+    }
+
+  }
+
   &.big-gap {
     > * {
       margin-right: 3rem;
