added save-app confirm to upload page

--- a/app/client/templates/components/components.scss
+++ b/app/client/templates/components/components.scss
@@ -208,16 +208,18 @@
 
   > .message {
 
+    text-transform: uppercase;
+
     a {
-
       color: #222222;
-
     }
 
     .date {
-
       color: #783189;
+    }
 
+    .green {
+      color: #4b9441;
     }
 
   }
