--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -16,9 +16,20 @@
     <div class="right-float on-top">
 
       <div class="button-block">
-        <div class="sandstorm-button neutral" data-action="submit-app">
-          SUBMIT APP FOR REVIEW
-        </div>
+        {{#if lastEdit}}
+          <div class="message">
+            <i class="green icon-approved_dark"></i>SAVED AT {{dateFormat lastEdit 'hh:mm, DD MMM YYYY'}}
+          </div>
+        {{/if}}
+        {{#if submitted}}
+          <div class="message">
+            <a href="/appsByMe">SUBMITTED ON <span class="date">{{dateFormat submitted 'DD MMM YYYY'}}</span></a>
+          </div>
+        {{else}}
+          <div class="sandstorm-button neutral" data-action="submit-app">
+            SUBMIT APP FOR REVIEW
+          </div>
+        {{/if}}
         <div class="sandstorm-button neutral" data-action="save-app">
           SAVE EDITS
         </div>
