--- a/app/client/templates/edit/edit.html
+++ b/app/client/templates/edit/edit.html
@@ -207,9 +207,11 @@
     <div class="right-float clearfix on-top">
 
       <div class="button-block">
+        {{#unless submitted}}
         <div class="sandstorm-button neutral" data-action="submit-app">
           SUBMIT APP FOR REVIEW
         </div>
+        {{/unless}}
         <div class="sandstorm-button neutral" data-action="save-app">
           SAVE EDITS
         </div>
