--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -172,9 +172,11 @@
     <div class="right-float on-top">
 
       <div class="button-block">
+        {{#unless submitted}}
         <div class="sandstorm-button neutral" data-action="submit-app">
           SUBMIT APP FOR REVIEW
         </div>
+        {{/unless}}
         <div class="sandstorm-button neutral" data-action="save-app">
           SAVE DRAFT
         </div>
