--- a/app/client/templates/upload/upload.html
+++ b/app/client/templates/upload/upload.html
@@ -11,7 +11,7 @@
   </div>
 
   {{#with app}}
-  <form class="upload-box">
+  <form class="upload-box validation">
 
     <div class="right-float on-top">
 
@@ -42,7 +42,7 @@
 
     <div class="section clearfix">
 
-      <h3 class="title">Application File</h3>
+      <h3 class="title" data-invalid={{validate 'spkLink'}}>Application File</h3>
 
       <div class="half-col">
 
@@ -52,7 +52,7 @@
 
       <div class="half-col">
 
-        <h3 class="title">Title</h3>
+        <h3 class="title" data-invalid={{validate 'name'}}>Title</h3>
         <input type="text" data-field="name" value="{{name}}" required />
 
         <h3 class="title">Author</h3>
@@ -71,20 +71,20 @@
         <h4 class="mini-title">Ported by</h4>
         <div class="read-only">{{getUsername author}}</div>
 
-        <h4 class="mini-title">Code URL</h4>
+        <h4 class="mini-title" data-invalid={{validate 'codeLink'}}>Code URL</h4>
         <input type="text" data-field="codeLink" value="{{codeLink}}" pattern="https?://.+" />
 
-        <h4 class="mini-title">License</h4>
+        <h4 class="mini-title" data-invalid={{validate 'license'}}>License</h4>
         <input type="text" data-field="license" value="{{license}}" />
 
-        <h4 class="mini-title">Version</h4>
+        <h4 class="mini-title" data-invalid={{validate 'versions'}}>Version</h4>
         <input type="text" data-action="update-version" value="{{latestVersion}}" />
 
       </div>
 
       <div class="half-col">
 
-        <h4 class="mini-title">Website</h4>
+        <h4 class="mini-title" data-invalid={{validate 'webLink'}}>Website</h4>
         <input type="text" data-field="webLink" value="{{webLink}}" />
 
         {{> connectButton service="github"}}
@@ -92,7 +92,7 @@
 
       </div>
 
-      <h3 class="title">Genre</h3>
+      <h3 class="title" data-invalid={{validate 'categories'}}>Genre</h3>
 
       {{> genreGrid}}
 
@@ -104,7 +104,7 @@
 
       <div class="half-col">
 
-        <h3 class="title">Icon</h3>
+        <h3 class="title" data-invalid={{validate 'image'}}>Icon</h3>
 
         {{> iconPicker}}
 
